# rag-agent-harness

./: .gitignore  IMPLEMENTATION_PLAN.md  PIPELINE.md  RAG_AGENT_HARNESS.md  README.md  app.py  chainlit.md  config.py  demo.html  main.py  pyproject.toml
harness/: agent.py  hooks.py  prompts.py  providers.py  state.py  tools.py
ingestion/: chunker.py  ingest.py  pipeline.py
renderers/: base.py  chainlit.py  terminal.py
retrieval/: bm25.py  embeddings.py  search.py  vector_store.py
sample_docs/: acme_q3_report.txt  climate_policy_brief.txt
